--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
   <version>1.0-SNAPSHOT</version>
   <name>SpringExample</name>
   <url>http://maven.apache.org</url>
-  
   <dependencies>
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -21,7 +20,24 @@
 		<artifactId>spring</artifactId>
 		<version>2.5.6</version>
 	</dependency>
-    
-    
-  </dependencies>
+     </dependencies>
+<build>
+<plugins>
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M1</version>
+    <executions>
+      <execution>
+        <phase>test</phase>
+      </execution>
+    </executions>
+    <configuration>
+      <suiteXmlFiles>
+        <suiteXmlFile>testng.xml</suiteXmlFile>
+      </suiteXmlFiles>
+    </configuration>
+  </plugin>
+  </plugins>
+</build>
 </project>
